infra/kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poltr
