infra/kube/appview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appview
  namespace: poltr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: appview
  template:
    metadata:
      labels:
        app: appview
    spec:
      imagePullSecrets:
        - name: ghcr-registry
      containers:
        - name: appview
          image: ghcr.io/nikwyss/poltr-appview:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: appview
  namespace: poltr
spec:
  selector:
    app: appview
  ports:
    - name: http
      port: 80
      targetPort: 3000
